--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -1,3 +1,22 @@
+/*-----------------------------RESPONSIVENESS*/
+@media only screen and (max-width: 767px) {
+  /*banner*/
+  body .banner-info { margin-bottom: 25vw; }
+  .content-margins .banner { height: 85vw; }
+  body #work-title { font-size: 5vw; }
+  .banner-info .body-container { grid-template-columns: 30% 70%; }
+  .banner-info .body-container p { font-size: 3vw; }
+  /*end banner*/
+
+  body .body-container { grid-template-columns: 100%; margin-bottom: 10vw;}
+  body .body-container p { font-size: 2.5vw; }
+  .body-container #body-header { font-size: 4vw; margin-bottom: 2.5vw;}
+
+  body .conclusion-container { grid-template-columns: 100%; margin-bottom: 15vw;}
+  body .conclusion-container p { font-size: 2.5vw; }
+  .conclusion-container #body-header { font-size: 4vw; margin-bottom: 2.5vw;}
+} 
+
 #caida-banner {
   background-color: #BBE8E0;
 }
