--- a/style/aboutStyle.css
+++ b/style/aboutStyle.css
@@ -1,11 +1,11 @@
 /*-----------------------------RESPONSIVENESS*/
 @media only screen and (max-width: 767px) {
-  body .about-container { grid-template-columns: 100%; }
+  body .about-container { width: 100%; }
   body .about-pic img { margin-bottom: 10vw; }
   .about-container .aboutHeader { font-size: 1.8vw; }
   .about-container #about-txt { font-size: 4vw; }
   .about-container .about-right-pad { padding-right: 0; }
-  .about-container #last-film, .about-container #movie { display: none; }
+  .about-container #movie { display: none; }
 }
 
 /*----------------------------------------ABOUT*/
@@ -15,27 +15,14 @@
 }
 
 .about-container {
-  display: grid;
-  grid-template-columns: 33.3% 33.3% 33.3%;
-  margin-bottom: 5vw;
+  width: 60%;
+  margin-bottom: 3vw;
 }
 
 .about-container p {
   font-size: 1.3vw;
   line-height: 200%;
   margin: 0;
-}
-
-.about-right-pad {
-  padding-right: 5vw;
-}
-
-.padding-bottom {
-  padding-bottom: 5vw;
-}
-
-.about-p {
-  padding-bottom: 2vw;
 }
 
 /*-------------------------------------MOVIE*/
