--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -31,6 +31,7 @@
   width: 55%;
   line-height: 120%;
   z-index: 10;
+  filter: drop-shadow(0 0 0.3px black);
 }
 #description-2 {
   font-size: 1.8vw;
@@ -39,6 +40,7 @@
   width: 55%;
   line-height: 120%;
   z-index: 10;
+  filter: drop-shadow(0 0 0.3px black);
 }
 
 #white-block {
