--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -60,6 +60,10 @@ section.visible {
 }
 
 /*----------------------------------HEADER*/
+.highlight {
+  background-image: linear-gradient(transparent, transparent 68%, rgb(188, 240, 224) 68%, rgb(188, 240, 224));
+}
+
 #header {
   padding-bottom: 7vw;
 }
