--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -49,6 +49,7 @@
   height: 25vw;
   background: white;
   z-index: -1;
+  border-radius: 8px;
 }
 
 #color-block {
@@ -57,10 +58,11 @@
   right: 12vw;
   width: 45%;
   height: 25vw;
-  opacity: 0.75;
+  opacity: 0.5;
   z-index: -1;
   animation: colorchange 20s ease infinite;
   -webkit-animation: colorchange 20s ease infinite; /* Chrome and Safari */
+  border-radius: 8px;
 }
 
 @keyframes colorchange {
@@ -126,6 +128,7 @@
   width: 100%;
   transition: all 0.2s ease;
   overflow: visible;
+  border-radius: 10px;
 }
 
 .grid-item-right {
@@ -164,7 +167,7 @@
 }
 
 #title {
-  font-weight: 500;
+  font-weight: bold;
   font-size: 2vw;
   line-height: normal;
   margin-bottom: 2vw;
