--- a/css/sharedStyle.css
+++ b/css/sharedStyle.css
@@ -45,7 +45,7 @@ a { color: rgb(23,23,23); }
 .mb-0 { margin-bottom: 0 !important; }
 
 /*----------------------------------FADEIN*/
-section {
+section.transparent {
   opacity: 0;
   transform: translate(0, 100px);
   transition: all 2s;
@@ -163,6 +163,7 @@ section.visible {
   transition: all 0.5s ease;
   line-height: 2vw;
   margin-right: 0;
+  display: none;
 }
 #darkmode-txt {
   margin-right: 1vw;
@@ -250,7 +251,8 @@ input:checked + .slider:before {
   position: absolute;
   width: 76vw;
   top: 40vw;
-  background: #171717;
+  /* background: #171717; */
+  background: #f5f5f5;
   transition: all 0.5s ease;
 }
 
